--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_create_group.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_create_group.xml
@@ -54,7 +54,7 @@
                     android:inputType="textCapSentences"
                     android:paddingVertical="15dp"
                     android:textColor="@color/sceyt_color_text_primary"
-                    android:textColorHint="@color/sceyt_color_hint"
+                    android:textColorHint="@color/sceyt_color_text_footnote"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
                     android:hint="@string/sceyt_about"
                     android:paddingVertical="15dp"
                     android:textColor="@color/sceyt_color_text_primary"
-                    android:textColorHint="@color/sceyt_color_hint"
+                    android:textColorHint="@color/sceyt_color_text_footnote"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tvSubject"
