--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
@@ -36,7 +36,7 @@
         android:hint="@string/sceyt_write_a_message"
         android:padding="16dp"
         android:textColor="@color/sceyt_color_text_primary"
-        android:textColorHint="@color/sceyt_color_hint"
+        android:textColorHint="@color/sceyt_color_text_footnote"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnShare"
         app:layout_constraintEnd_toEndOf="parent"
