--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_create_channel_details.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_create_channel_details.xml
@@ -46,7 +46,7 @@
                 android:maxLines="2"
                 android:paddingVertical="15dp"
                 android:textColor="@color/sceyt_color_text_primary"
-                android:textColorHint="@color/sceyt_color_hint"
+                android:textColorHint="@color/sceyt_color_text_footnote"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
                 android:maxLines="5"
                 android:paddingVertical="15dp"
                 android:textColor="@color/sceyt_color_text_primary"
-                android:textColorHint="@color/sceyt_color_hint"
+                android:textColorHint="@color/sceyt_color_text_footnote"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/inputSubject"
@@ -95,7 +95,7 @@
                 android:singleLine="true"
                 android:textAlignment="viewStart"
                 android:textColor="@color/sceyt_color_text_primary"
-                android:textColorHint="@color/sceyt_color_hint"
+                android:textColorHint="@color/sceyt_color_text_footnote"
                 android:textSize="16sp"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="@+id/uriBegin"
