--- a/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
@@ -142,4 +142,12 @@
         <item name="android:windowExitAnimation">@anim/sceyt_anim_disappear_alpha</item>
     </style>
 
+    <style name="SceytButtonAppearance" parent="@style/Widget.MaterialComponents.Button">
+        <item name="textAllCaps">false</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="backgroundTint">@color/sceyt_color_accent</item>
+        <item name="cornerRadius">10dp</item>
+    </style>
+
 </resources>
