--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_location_preview.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_location_preview.xml
@@ -14,15 +14,14 @@
         app:sceytUiToolbarTitle="@string/sceyt_location"
         app:sceytUiToolbarTitleTextColor="@color/sceyt_color_text_primary" />
 
-    <View
-        android:id="@+id/map_fragment"
-        android:background="@color/sceyt_color_gray"
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/ll_location_info"/>
+        app:layout_constraintBottom_toTopOf="@id/ll_location_info" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/ll_location_info"
