--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_file.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_file.xml
@@ -12,12 +12,30 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:background="@drawable/sceyt_bg_corners_8"
+        android:background="@drawable/sceyt_bg_circle"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sceyt_ic_file_filled" />
+        tools:srcCompat="@drawable/sceyt_ic_file_filled" />
+
+    <com.sceyt.chatuikit.presentation.customviews.CircularProgressView
+        android:id="@+id/loadProgress"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="2dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/icFile"
+        app:layout_constraintStart_toStartOf="@id/icFile"
+        app:layout_constraintEnd_toEndOf="@id/icFile"
+        app:layout_constraintBottom_toBottomOf="@id/icFile"
+        app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+        app:sceytUiProgressIconSizeInPercent="65"
+        app:sceytUiProgressIconTint="@color/sceyt_color_on_primary"
+        app:sceytUiProgressMinProgress="20"
+        app:sceytUiProgressTrackColor="@android:color/transparent"
+        app:sceytUiProgressTrackThickness="2.5dp"
+        tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvFileName"
@@ -30,7 +48,7 @@
         android:textSize="@dimen/mediumTextSize"
         android:textStyle="bold"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@+id/loadProgress"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icFile"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,22 +67,5 @@
         app:layout_constraintStart_toEndOf="@+id/icFile"
         app:layout_constraintTop_toBottomOf="@+id/tvFileName"
         tools:text="67 KB" />
-
-    <com.sceyt.chatuikit.presentation.customviews.CircularProgressView
-        android:id="@+id/loadProgress"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:padding="1dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:sceytUiProgressColor="@color/sceyt_color_accent"
-        app:sceytUiProgressIconSizeInPercent="65"
-        app:sceytUiProgressIconTint="@color/sceyt_color_accent"
-        app:sceytUiProgressMinProgress="2"
-        app:sceytUiProgressTrackColor="@android:color/transparent"
-        app:sceytUiProgressTrackThickness="2.5dp"
-        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
