--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
@@ -47,8 +47,7 @@
             android:textColor="@color/sceyt_color_text_primary"
             android:textSize="16sp"
             android:theme="@style/SceytSwitchStyle"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            android:visibility="visible" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
