--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -27,6 +27,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_auto_deleted"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="-4dp"
+        android:layout_marginEnd="-1dp"
+        app:layout_constraintTop_toTopOf="@id/avatar"
+        app:layout_constraintEnd_toEndOf="@id/avatar"
+        app:srcCompat="@drawable/sceyt_ic_auto_deleted_channel"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
     <com.sceyt.chatuikit.presentation.customviews.OnlineView
         android:id="@+id/onlineStatus"
         android:layout_width="14dp"
