Added message display counter in public channels.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -85,5 +85,7 @@
 
         <attr name="sceytUiSwipeReplyIcon" format="reference" />
 
+        <attr name="sceytMessageDisplayCountIcon" format="reference" />
+
     </declare-styleable>
 </resources>
