--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_file_message.xml
@@ -120,13 +120,13 @@
             android:layout_height="0dp"
             android:padding="1dp"
             android:visibility="gone"
-            app:sceytUiProgressIconSizeInPercent="65"
             app:layout_constraintBottom_toBottomOf="@+id/icFile"
             app:layout_constraintEnd_toEndOf="@id/icFile"
             app:layout_constraintStart_toStartOf="@+id/icFile"
             app:layout_constraintTop_toTopOf="@+id/icFile"
-            app:sceytUiProgressMinProgress="2"
             app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+            app:sceytUiProgressIconSizeInPercent="65"
+            app:sceytUiProgressMinProgress="2"
             app:sceytUiProgressTrackColor="@android:color/transparent" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -170,6 +170,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:sceytUiDateStatusDateTextColor="@color/sceyt_color_text_secondary"
             app:sceytUiDateStatusDateTextSize="@dimen/tinyTextSize"
+            app:sceytUiDateStatusLeadingIconPadding="5dp"
+            app:sceytUiDateStatusLeadingIconSize="15.5dp"
             app:sceytUiDateStatusTrailingIconPadding="5dp"
             app:sceytUiDateStatusTrailingIconSize="15.5dp"
             tools:sceytUiDateStatusDateText="00:37"
