--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_attachments_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_attachments_message.xml
@@ -141,6 +141,10 @@
             app:layout_constraintEnd_toEndOf="@id/rvFiles"
             app:sceytUiDateStatusDateTextColor="@color/sceyt_color_text_secondary"
             app:sceytUiDateStatusDateTextSize="@dimen/tinyTextSize"
+            app:sceytUiDateStatusLeadingIcon="@drawable/sceyt_ic_display_count"
+            app:sceytUiDateStatusLeadingIconPadding="5dp"
+            app:sceytUiDateStatusLeadingIconSize="15.5dp"
+            app:sceytUiDateStatusTrailingIconPadding="5dp"
             app:sceytUiDateStatusTrailingIconSize="15.5dp"
             tools:sceytUiDateStatusDateText="00:37" />
 
