--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_link_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_link_message.xml
@@ -158,6 +158,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:sceytUiDateStatusDateTextColor="@color/sceyt_color_text_secondary"
             app:sceytUiDateStatusDateTextSize="@dimen/tinyTextSize"
+            app:sceytUiDateStatusLeadingIconPadding="5dp"
+            app:sceytUiDateStatusLeadingIconSize="15.5dp"
+            app:sceytUiDateStatusTrailingIconPadding="5dp"
             app:sceytUiDateStatusTrailingIconSize="15.5dp"
             tools:sceytUiDateStatusDateText="00:37" />
 
