--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
@@ -223,6 +223,9 @@
             app:sceytUiDateStatusDateTextColor="@color/sceyt_color_text_secondary"
             app:sceytUiDateStatusDateTextSize="@dimen/tinyTextSize"
             app:sceytUiDateStatusHighlighted="true"
+            app:sceytUiDateStatusLeadingIconPadding="5dp"
+            app:sceytUiDateStatusLeadingIconSize="15.5dp"
+            app:sceytUiDateStatusTrailingIconPadding="5dp"
             app:sceytUiDateStatusTrailingIconSize="15.5dp"
             tools:sceytUiDateStatusDateText="00:37" />
 
