--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_voice_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_voice_message.xml
@@ -98,13 +98,13 @@
             android:layout_height="0dp"
             android:padding="1dp"
             android:visibility="gone"
-            app:sceytUiProgressIconSizeInPercent="65"
             app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
             app:layout_constraintEnd_toEndOf="@+id/playPauseButton"
             app:layout_constraintStart_toStartOf="@+id/playPauseButton"
             app:layout_constraintTop_toTopOf="@+id/playPauseButton"
-            app:sceytUiProgressMinProgress="2"
             app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+            app:sceytUiProgressIconSizeInPercent="65"
+            app:sceytUiProgressMinProgress="2"
             app:sceytUiProgressTrackColor="@android:color/transparent"
             tools:visibility="visible" />
 
@@ -168,6 +168,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:sceytUiDateStatusDateTextColor="@color/sceyt_color_text_secondary"
             app:sceytUiDateStatusDateTextSize="@dimen/tinyTextSize"
+            app:sceytUiDateStatusLeadingIconPadding="5dp"
+            app:sceytUiDateStatusLeadingIconSize="15.5dp"
             app:sceytUiDateStatusTrailingIconPadding="5dp"
             app:sceytUiDateStatusTrailingIconSize="15.5dp"
             tools:sceytUiDateStatusDateText="00:37"
