--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_member.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_member.xml
@@ -17,7 +17,7 @@
         app:sceytUiAvatarTextSize="16dp"
         tools:sceytUiAvatarFullName="Art d" />
 
-    <com.sceyt.chatuikit.presentation.customviews.OnlineView
+    <com.sceyt.chatuikit.presentation.customviews.PresenceStateIndicatorView
         android:id="@+id/onlineStatus"
         android:layout_width="11dp"
         android:layout_height="11dp"
@@ -25,9 +25,9 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/avatar"
-        app:sceytUiOnlineViewIndicatorColor="@color/sceyt_color_green"
-        app:sceytUiOnlineViewStrokeColor="@color/sceyt_color_background"
-        app:sceytUiOnlineViewStrokeWidth="1dp"
+        app:sceytUiIndicatorColor="@color/sceyt_color_green"
+        app:sceytUiIndicatorStrokeColor="@color/sceyt_color_background"
+        app:sceytUiIndicatorStrokeWidth="1dp"
         tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
