--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_edit.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_edit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sceyt_color_background"
-    tools:context=".presentation.components.channel_info.edit.EditChannelFragment">
+    tools:context=".presentation.components.channel_info.edit.ChannelEditFragment">
 
     <com.sceyt.chatuikit.presentation.customviews.CustomToolbar
         android:id="@+id/toolbar"
