--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_info_options.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_info_options.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.sceyt.chatuikit.presentation.components.channel_info.options.InfoOptionsFragment">
+    tools:context="com.sceyt.chatuikit.presentation.components.channel_info.options.ChannelInfoOptionsFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/members"
