--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_deleted_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_deleted_message.xml
@@ -39,7 +39,7 @@
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.sceyt.chatuikit.presentation.customviews.DateStatusView
+        <com.sceyt.chatuikit.presentation.customviews.DecoratedTextView
             android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,11 +48,11 @@
             android:includeFontPadding="false"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
-            app:sceytUiDateStatusDateTextColor="@color/sceyt_color_text_secondary"
-            app:sceytUiDateStatusDateTextSize="@dimen/tinyTextSize"
-            app:sceytUiDateStatusTrailingIconPadding="5dp"
-            app:sceytUiDateStatusTrailingIconSize="15.5dp"
-            tools:sceytUiDateStatusDateText="00:37" />
+            app:sceytUiDecoratedTextDateTextColor="@color/sceyt_color_text_secondary"
+            app:sceytUiDecoratedTextDateTextSize="@dimen/tinyTextSize"
+            app:sceytUiDecoratedTextTrailingIconPadding="5dp"
+            app:sceytUiDecoratedTextTrailingIconSize="15.5dp"
+            tools:sceytUiDecoratedTextDateText="00:37" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
