--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -96,7 +96,7 @@
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
             tools:text="Lore ipsum description is created \nfrom" />
 
-        <com.sceyt.chatuikit.presentation.customviews.DateStatusView
+        <com.sceyt.chatuikit.presentation.customviews.DecoratedTextView
             android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -107,12 +107,12 @@
             android:paddingEnd="5dp"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
-            app:sceytUiDateStatusDateTextColor="@color/sceyt_color_text_secondary"
-            app:sceytUiDateStatusDateTextSize="@dimen/tinyTextSize"
-            app:sceytUiDateStatusTrailingIconPadding="5dp"
-            app:sceytUiDateStatusTrailingIconSize="15.5dp"
-            tools:sceytUiDateStatusDateText="00:37"
-            tools:sceytUiDateStatusTrailingIcon="@drawable/sceyt_ic_status_delivered" />
+            app:sceytUiDecoratedTextDateTextColor="@color/sceyt_color_text_secondary"
+            app:sceytUiDecoratedTextDateTextSize="@dimen/tinyTextSize"
+            app:sceytUiDecoratedTextTrailingIconPadding="5dp"
+            app:sceytUiDecoratedTextTrailingIconSize="15.5dp"
+            tools:sceytUiDecoratedTextDateText="00:37"
+            tools:sceytUiDecoratedTextTrailingIcon="@drawable/sceyt_ic_status_delivered" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
