--- a/SceytChatUiKit/src/main/res/menu/sceyt_menu_message_actions.xml
+++ b/SceytChatUiKit/src/main/res/menu/sceyt_menu_message_actions.xml
@@ -37,7 +37,7 @@
     <item
         android:id="@+id/sceyt_edit_message"
         android:icon="@drawable/sceyt_ic_edit_stroked"
-        android:title="@string/sceyt_edit_message"
+        android:title="@string/sceyt_edit"
         app:showAsAction="ifRoom" />
 
     <item
