--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_image_item.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_image_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/fileImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/sceyt_color_gray"
+        android:background="@color/sceyt_color_background_secondary"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:.8"
@@ -25,7 +25,7 @@
         android:layout_height="@dimen/messageProgressSize"
         android:padding="1dp"
         android:visibility="gone"
-        app:sceytUiProgressBackgroundColor="@color/sceyt_progress_bg_color"
+        app:sceytUiProgressBackgroundColor="@color/sceyt_color_overlay_background_2"
         app:sceytUiProgressIconSizeInPercent="65"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
