--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_video.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
     android:background="@drawable/sceyt_bg_corners_6"
-    android:backgroundTint="@color/sceyt_color_gray">
+    android:backgroundTint="@color/sceyt_color_background_secondary">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image"
@@ -18,8 +18,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/sceyt_color_gray" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDuration"
@@ -27,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:background="@drawable/sceyt_bg_corners_20"
-        android:backgroundTint="@color/sceyt_progress_bg_color"
+        android:backgroundTint="@color/sceyt_color_overlay_background_2"
         android:drawableStart="@drawable/sceyt_ic_video"
         android:drawablePadding="5dp"
         android:gravity="center"
